// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly renders minos described by props 1`] = `
<div
  id="gameCanvas"
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <div>
      <button
        type="button"
      >
        Start Game
      </button>
      <br />
      <button
        type="button"
      >
        Show Leaderboard
      </button>
    </div>
  </div>
</div>
`;

exports[`correctly renders minos described by props 2`] = `
<div
  id="gameCanvas"
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    id="startGameMenu"
  >
    <div>
      <h2>
        Game Over
      </h2>
      <button
        type="button"
      >
        Play Again
      </button>
      <br />
      <button
        type="button"
      >
        Show Leaderboard
      </button>
    </div>
    <form>
      <h3>
        Submit to Leaderboard
      </h3>
      <label>
        Nickname:
        <input
          onChange={[Function]}
          value=""
        />
      </label>
      <br />
      <button
        disabled={true}
        onClick={[Function]}
      >
        Submit
      </button>
      <p>
        Saving
      </p>
    </form>
  </div>
</div>
`;

exports[`correctly renders minos described by props 3`] = `
<div
  id="gameCanvas"
>
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 5,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 4,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 6,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "red",
        "gridColumn": 7,
        "gridRow": 1,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 4,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 5,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
  <div
    className="mino"
    style={
      Object {
        "backgroundColor": "brown",
        "gridColumn": 6,
        "gridRow": 11,
        "opacity": 1,
      }
    }
  />
</div>
`;
